--- a/part2.ipynb
+++ b/part2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,16 +23,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bearer_token=\"AAAAAAAAAAAAAAAAAAAAABjFsgEAAAAAlpTaLAR1wJ2sut2HNk8oY2r9u28%3DRWpfy37hyg15PEYEQJAQwhjS9S3RasSkc1WV35KH1FhBPfAgjF\""
+    "# bearer_token=\"AAAAAAAAAAAAAAAAAAAAABjFsgEAAAAAlpTaLAR1wJ2sut2HNk8oY2r9u28%3DRWpfy37hyg15PEYEQJAQwhjS9S3RasSkc1WV35KH1FhBPfAgjF\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bearer_token='AAAAAAAAAAAAAAAAAAAAAOx80AEAAAAAGgB5QtfXDuj4SVgnNtV2NMpo0pA%3D16eODJnzLvQXSx2A0UBgWb19k68GYUiFpCZ5GDfRvakn7chFLw'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,58 +50,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Rate limit exceeded. Sleeping for 901 seconds.\n"
-     ]
-    }
-   ],
-   "source": [
-    "search_words = '\"when life gives you tangerines\"'\n",
-    "\n",
-    "response = client.search_recent_tweets(search_words, max_results=70)\n",
-    "tweets = response.data\n",
-    "\n",
-    "\n",
-    "collected_tweets = [tweet.text for tweet in tweets if not tweet.text.startswith(\"RT @\")]\n",
-    "\n",
-    "df = pd.DataFrame(collected_tweets)\n",
-    "df.to_csv(\"tweets_tangerines.csv\", index=False)\n",
-    "print(f\"Saved {len(df)} tweets to tweets_tangerines.csv!\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Rate limit exceeded. Sleeping for 470 seconds.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error: ('Connection aborted.', RemoteDisconnected('Remote end closed connection without response'))\n",
-      "Saved 0 tweets to tweets_tangerines.csv!\n"
+      "Saved 14 tweets to tweets_tangerines.csv!\n"
      ]
     }
    ],
    "source": [
-    "search_words = '\"when life gives you tangerines\"'\n",
-    "max_results_per_request = 50  # Twitter allows max 100 per request\n",
-    "total_tweets_needed = 200  # Set how many tweets you want\n",
-    "collected_tweets = []  # Store fetched tweets\n",
-    "next_token = None  # Pagination token\n",
+    "# search_words = 'when life gives you tangerines'\n",
+    "\n",
+    "# response = client.search_recent_tweets(search_words, max_results=70)\n",
+    "# tweets = response.data\n",
+    "\n",
+    "\n",
+    "# collected_tweets = [tweet.text for tweet in tweets if not tweet.text.startswith(\"RT @\")]\n",
+    "\n",
+    "# df = pd.DataFrame(collected_tweets)\n",
+    "# df.to_csv(\"tweets_tangerines.csv\", index=False)\n",
+    "# print(f\"Saved {len(df)} tweets to tweets_tangerines.csv!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Rate limit exceeded. Sleeping for 598 seconds.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# search_words = 'when life gives you tangerines lang:en'\n",
+    "# max_results_per_request = 50  # Twitter allows max 100 per request\n",
+    "# total_tweets_needed = 200  # Set how many tweets you want\n",
+    "# collected_tweets = []  # Store fetched tweets\n",
+    "# next_token = None  # Pagination token\n",
+    "\n",
+    "# # Fetch tweets in multiple requests\n",
+    "# while len(collected_tweets) < total_tweets_needed:\n",
+    "#     try:\n",
+    "#         response = client.search_recent_tweets(\n",
+    "#             query=search_words,\n",
+    "#             max_results=max_results_per_request,\n",
+    "#             tweet_fields=[\"created_at\", \"author_id\", \"lang\"],\n",
+    "#             next_token=next_token  # Fetch next page\n",
+    "#         )\n",
+    "        \n",
+    "#         if response.data:\n",
+    "#             # Filter out retweets manually\n",
+    "#             tweets = [{\"ID\": tweet.id, \"Timestamp\": tweet.created_at, \"User\": tweet.author_id, \"Tweet\": tweet.text} \n",
+    "#                       for tweet in response.data if not tweet.text.startswith(\"RT @\") and tweet.lang == \"en\"] # manually filter retweets\n",
+    "            \n",
+    "#             collected_tweets.extend(tweets)\n",
+    "#             print(f\"Collected {len(collected_tweets)} tweets so far...\")\n",
+    "\n",
+    "#         # Get next page token\n",
+    "#         next_token = response.meta.get(\"next_token\")\n",
+    "\n",
+    "#         # Stop if no more tweets\n",
+    "#         if not next_token:\n",
+    "#             print(\"No more tweets available!\")\n",
+    "#             break\n",
+    "\n",
+    "#         time.sleep(30)  # Avoid hitting rate limits\n",
+    "\n",
+    "#     except Exception as e:\n",
+    "#         print(f\"Error: {e}\")\n",
+    "#         break\n",
+    "\n",
+    "# # Convert to DataFrame and Save to CSV\n",
+    "# df = pd.DataFrame(collected_tweets)\n",
+    "# df.to_csv(\"tweets_tangerines.csv\", index=False)\n",
+    "# print(f\"Saved {len(df)} tweets to tweets_tangerines.csv!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Rate limit exceeded. Sleeping for 793 seconds.\n"
+     ]
+    }
+   ],
+   "source": [
+    "search_words = 'when life gives you tangerines lang:en'\n",
+    "max_results_per_request = 50\n",
+    "total_tweets_needed = 200\n",
+    "collected_tweets = []\n",
+    "next_token = None\n",
+    "\n",
+    "csv_filename = \"tweets_tangerines.csv\"\n",
     "\n",
     "# Fetch tweets in multiple requests\n",
     "while len(collected_tweets) < total_tweets_needed:\n",
@@ -100,22 +161,28 @@
     "        response = client.search_recent_tweets(\n",
     "            query=search_words,\n",
     "            max_results=max_results_per_request,\n",
-    "            tweet_fields=[\"created_at\", \"author_id\"],\n",
-    "            next_token=next_token  # Fetch next page\n",
+    "            tweet_fields=[\"created_at\", \"author_id\", \"lang\"],\n",
+    "            next_token=next_token\n",
     "        )\n",
-    "        \n",
+    "\n",
     "        if response.data:\n",
-    "            # Filter out retweets manually\n",
+    "            # Filter out retweets and non-English tweets\n",
     "            tweets = [{\"ID\": tweet.id, \"Timestamp\": tweet.created_at, \"User\": tweet.author_id, \"Tweet\": tweet.text} \n",
-    "                      for tweet in response.data if not tweet.text.startswith(\"RT @\")] # manually filter retweets\n",
-    "            \n",
+    "                      for tweet in response.data if not tweet.text.startswith(\"RT @\") and tweet.lang == \"en\"]\n",
+    "\n",
     "            collected_tweets.extend(tweets)\n",
     "            print(f\"Collected {len(collected_tweets)} tweets so far...\")\n",
+    "\n",
+    "            # Convert new tweets to DataFrame\n",
+    "            df = pd.DataFrame(tweets)\n",
+    "\n",
+    "            # Append to CSV (without header if file exists)\n",
+    "            df.to_csv(csv_filename, mode='a', index=False, header=not pd.io.common.file_exists(csv_filename))\n",
+    "            print(f\"Appended {len(df)} new tweets to {csv_filename}!\")\n",
     "\n",
     "        # Get next page token\n",
     "        next_token = response.meta.get(\"next_token\")\n",
     "\n",
-    "        # Stop if no more tweets\n",
     "        if not next_token:\n",
     "            print(\"No more tweets available!\")\n",
     "            break\n",
@@ -124,12 +191,7 @@
     "\n",
     "    except Exception as e:\n",
     "        print(f\"Error: {e}\")\n",
-    "        break\n",
-    "\n",
-    "# Convert to DataFrame and Save to CSV\n",
-    "df = pd.DataFrame(collected_tweets)\n",
-    "df.to_csv(\"tweets_tangerines.csv\", index=False)\n",
-    "print(f\"Saved {len(df)} tweets to tweets_tangerines.csv!\")"
+    "        break"
    ]
   },
   {
@@ -186,7 +248,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
