--- a/part2.ipynb
+++ b/part2.ipynb
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bearer_token='AAAAAAAAAAAAAAAAAAAAAAx%2B0AEAAAAAQP6urkRSVjuG3KYVJEMiCIRw2XA%3D1FJOfzl6ziE64FcuGUh9337SKAS5ihyn9qPsVNCu6h7CfP5iwD'"
+    "bearer_token='AAAAAAAAAAAAAAAAAAAAAOF%2F0AEAAAAAK%2FOZioQs9h0%2FoETpHx6TgHVZ9%2Fs%3Dnuq6FzTc5XNfVyqjxFtD5EW6Kr34UwtXyVVC3oLKDIPaf27YWC'"
    ]
   },
   {
@@ -132,10 +132,18 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collected 12 tweets so far...\n",
+      "Appended 12 new tweets to tweets_tangerines.csv!\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Rate limit exceeded. Sleeping for 901 seconds.\n"
+      "Rate limit exceeded. Sleeping for 871 seconds.\n"
      ]
     }
    ],
