--- a/part2.ipynb
+++ b/part2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,16 +32,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bearer_token='AAAAAAAAAAAAAAAAAAAAAOF%2F0AEAAAAAK%2FOZioQs9h0%2FoETpHx6TgHVZ9%2Fs%3Dnuq6FzTc5XNfVyqjxFtD5EW6Kr34UwtXyVVC3oLKDIPaf27YWC'"
+    "# Amy's API (24/3/2025 Night)\n",
+    "bearer_token = \"AAAAAAAAAAAAAAAAAAAAAAqf0AEAAAAAF6IswZWwPiuk%2B09eVxEuSWz%2Bz4s%3Dt6rpSGfEfV8GPwkPDNSwuIF2R4n1M8H76mczQaQMRSidgKC2Wn\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Amy's API (24/3/2025 Morning)\n",
+    "# bearer_token=\"AAAAAAAAAAAAAAAAAAAAAIuU0AEAAAAAru8T5RvIurrnOQpqTpoHoQlU0Us%3DUTuW3O0gtVB3Kq24bP3lInZcXklRdnwvChFWyut1C3kSZrQSli\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Yiwei's API?\n",
+    "# bearer_token='AAAAAAAAAAAAAAAAAAAAAOF%2F0AEAAAAAK%2FOZioQs9h0%2FoETpHx6TgHVZ9%2Fs%3Dnuq6FzTc5XNfVyqjxFtD5EW6Kr34UwtXyVVC3oLKDIPaf27YWC'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,22 +149,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collected 12 tweets so far...\n",
-      "Appended 12 new tweets to tweets_tangerines.csv!\n"
+      "Collected 6 tweets so far...\n",
+      "Appended 6 new tweets to tweets_tangerines.csv!\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Rate limit exceeded. Sleeping for 871 seconds.\n"
+      "Rate limit exceeded. Sleeping for 870 seconds.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: ('Connection aborted.', RemoteDisconnected('Remote end closed connection without response'))\n"
      ]
     }
    ],
@@ -234,7 +262,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
